--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📱</text></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Social Media Dashboard - Unified Posting Platform" />
-    <title>Social Media Dashboard - Unified Posting Platform</title>
+    <title>Social Post Scheduler</title>
     <style>
       /* Prevent FOUC */
       body { 
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div id="root">
-      <div class="loading">Loading Social Media Dashboard...</div>
+      <div class="loading">Đang tải...</div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
