--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
   </head>
   <body>
     <div id="root">
-      <div class="loading">Đang tải...</div>
+      <div class="loading-container">
+        <div class="loading-icon">⚠️</div>
+        <div class="loading-message">
+          <strong>Đang tải ứng dụng...</strong><br />
+          Nếu quá 15 giây vẫn không thấy nội dung, hãy kiểm tra:<br />
+            Tắt các phần mềm <strong>chặn quảng cáo</strong> (AdBlock, uBlock,...)<br />
+            Làm mới trang sau khi tắt (Ctrl + R)
+        </div>
+      </div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
